[package]
name = "polyvis-wasm"
version = "0.1.0"
authors = ["zyan0096@student.monash.edu"]
description = "For homework, a WASM backend based on GeoRust."
license = "GPL-3.0-or-later"
repository = "https://github.com/Klaaktu/polyvis-wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.103"
geo = { version = "0.31.0", features = ["use-serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
