[package]
name = "polyvis-wasm"
version = "0.1.0"
authors = ["zyan0096@student.monash.edu"]
description = "For homework, a WASM backend based on GeoRust."
license = "GPL-3.0-or-later"
repository = "https://github.com/Klaaktu/polyvis-wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"
geo = { version = "0.31.0", features = ["use-serde"] }
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[profile.release]
lto = true
